--- a/app_AutoRed_Rails-Angular/config/database.yml
+++ b/app_AutoRed_Rails-Angular/config/database.yml
@@ -4,22 +4,36 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+#default: &default
+#  adapter: sqlite3
+#  pool: 5
+#  timeout: 5000
+#
+#Base de datos repartidores (prueba)
+#development:
+#  adapter:  mysql2
+#  host:     192.168.0.178
+#  port:     3306
+#  database: autored
+#  username: pablo
+#  password: pablos
 
+#Base de datos autored (la buena)
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter:  sqlserver
+  host:     187.141.140.100
+  port:     9001
+  database: BMSAutored240315
+  username: sistemas
+  password: 789321
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+#test:
+#  <<: *default
+#  database: db/test.sqlite3
+#
+#production:
+#  <<: *default
+#  database: db/production.sqlite3
