Se acomodo todo el backend de angular y una parte del controlador de ruby, solo falta resolver el error del renderizado (?) para que se actualize la vista al actualizar el controlador

--- a/app_AutoRed_Rails-Angular/config/database.yml
+++ b/app_AutoRed_Rails-Angular/config/database.yml
@@ -26,6 +26,8 @@ development:
   database: BMSAutored240315
   username: sistemas
   password: 789321
+  pool: 5
+  timeout: 5000000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
