Aplicación terminada parcialmente. Version para subir a heroku.

--- a/app_AutoRed_Rails-Angular/config/database.yml
+++ b/app_AutoRed_Rails-Angular/config/database.yml
@@ -23,7 +23,7 @@ development:
   adapter:  sqlserver
   host:     187.141.140.100
   port:     9001
-  database: BMSAutored240315
+  database: BMSAutoRed
   username: sistemas
   password: 789321
   pool: 5
